# appcraft-auth

./: .gitignore  .settings.example  README.md  README.rst  requirements.txt  setup.cfg  setup.py  short_description.txt
appcraft_auth/: abstract_managers.py  abstract_models.py  admin.py  apps.py  entities.py  managers.py  mappers.py  middleware.py  models.py  pipelines.py  serializers.py  tasks.py  urls.py  views.py
appcraft_auth/base/: api_views.py
appcraft_auth/errors/: error_codes.py  exceptions.py
appcraft_auth/managers/: auth_letter_model_manager.py  auth_user_model_manager.py
appcraft_auth/migrations/: 0001_initial.py  0002_auto_20211208_1051.py  0002_auto_20220606_1140.py
appcraft_auth/social_auth/: enums.py  pipelines.py  utils.py
appcraft_auth/utils/: datetime_utils.py  int_utils.py  other.py  request_utils.py
config/: celery.py  settings.py  urls.py
