[metadata]
name = appcraft-auth
version = 0.1
description = file: short_description.txt
long_description = file: README.rst
url = https://www.example.com/
author = AppCraft
author_email = appcraftdeveloper@gmail.com
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.1
    firebase-admin >= 5.0
    social-auth-app-django >= 5.0
    djangorestframework-simplejwt >= 4.8
    celery >= 5.2
    django-celery-beat >= 2.2
    redis >= 4.0